fixed mobile screen lp overflow -- still slight twocoltwo overflow on full screen view

--- a/sass/_splash.scss
+++ b/sass/_splash.scss
@@ -7,6 +7,7 @@
   background-color: transparent;
   padding: 0;
   margin: 0;
+  max-width: 100vw;
 }
 
 .splash-content {
@@ -16,7 +17,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  margin-left: 25%;
+  margin-left: 30%;
   padding: 0;
 
   @media only screen and (max-width: 479px) {
